--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-google-analytics": "^5.1.0",
     "gatsby-plugin-image": "^2.7.0",
     "gatsby-plugin-manifest": "^4.23.0",
+    "gatsby-plugin-netlify-cms": "^7.7.0",
     "gatsby-plugin-offline": "^5.7.0",
     "gatsby-plugin-react-helmet": "^5.7.0",
     "gatsby-plugin-sass": "^5.7.0",
@@ -25,6 +26,7 @@
     "gatsby-transformer-sharp": "^4.23.0",
     "katex": "^0.13.3",
     "lodash": "^4.17.21",
+    "netlify-cms-app": "^2.15.72",
     "node-sass": "^7.0.1",
     "prismjs": "^1.27.0",
     "prop-types": "^15.8.1",
@@ -38,7 +40,9 @@
     "prettier": "^2.5.1"
   },
   "homepage": "https://github.com/wangonya/flexible-gatsby",
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "main": "n/a",
   "repository": {
