--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,10 +1,14 @@
 backend:
-  name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
+  name: github
+   repo: marieqg/netlify-cms-medium
+
 # This line should *not* be indented
 publish_mode: editorial_workflow
+
 # This line should *not* be indented
-media_folder: "images/uploads" # Media files will be stored in the repo under images/uploads
+media_folder: static/img
+public_folder: /img
+
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
