config.yml changes again

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
-  name: github
-  repo: mjpagan/blog-gatsby
+  name: git-gateway
+  #name: github
+  #repo: mjpagan/blog-gatsby
   branch: master
 
 # This line should *not* be indented
