--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,8 +8,8 @@ backend:
 publish_mode: editorial_workflow
 
 # This line should *not* be indented
-media_folder: static/images
-public_folder: /images
+media_folder: static/img
+public_folder: /img
 
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
