--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -22,5 +22,6 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "Tags", name: "tags", widget: "list", max: 3, min: 1}
+      - {label: "Social Media Image", name: "img", widget: "image"}
+      - {label: "Tags", name: "tags", widget: "list", max: 5, min: 1}
       - {label: "Body", name: "body", widget: "markdown"}
