--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,10 +17,11 @@ collections:
     folder: "content/blog" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    path: "{{slug}}/index"
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Publish Date", name: "date", widget: "datetime", date_format: 'YYYY-MM-DD',time_format: 'HH:mm',}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Social Media Image", name: "img", widget: "image"}
       - {label: "Tags", name: "tags", widget: "list", max: 5, min: 1}
