--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -22,7 +22,7 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime", date_format: 'YYYY-MM-DD',time_format: 'HH:mm',}
-      - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      # - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Social Media Image", name: "img", widget: "image"}
       - {label: "Tags", name: "tags", widget: "list", max: 5, min: 1}
       - {label: "Body", name: "body", widget: "markdown"}
